--- a/pom.xml
+++ b/pom.xml
@@ -52,11 +52,17 @@
         <artifactId>metrics-core</artifactId>
         <version>3.2.2</version>
     </dependency>
-    
+
     <dependency>
         <groupId>io.dropwizard.metrics</groupId>
         <artifactId>metrics-graphite</artifactId>
         <version>3.2.2</version>
+    </dependency>
+
+    <dependency>
+       <groupId>org.apache.hbase</groupId>
+       <artifactId>hbase-client</artifactId>
+       <version>1.1.2</version>
     </dependency>
     
   </dependencies>
