--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,31 @@
     <version>1.5.1.RELEASE</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
+  
+  <repositories>
+      <repository>
+          <id>hortonworks</id>
+          <name>Public online Restlet repository</name>
+          <url>https://repo.spring.io/simple/hortonworks/</url>
+      </repository>
+      <repository>
+          <id>spring-io</id>
+          <name>Public online Restlet repository</name>
+          <url>https://repo.spring.io/</url>
+      </repository>
+      <repository>
+          <id>spring-io-releae</id>
+          <name>Public online Restlet repository</name>
+          <url>http://repo.spring.io/plugins-release/</url>
+      </repository>
 
+  </repositories>
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.7</java.version>
+    <hadoop.version>2.6.0</hadoop.version>
   </properties>
 
   <dependencies>
@@ -59,12 +79,32 @@
         <version>3.2.2</version>
     </dependency>
 
+	 <dependency>
+	     <groupId>org.apache.hbase</groupId>
+	     <artifactId>hbase-client</artifactId>
+	     <version>0.98.4.2.2.9.0-3393-hadoop2</version>
+	 </dependency>
+
+    <!-- Hadoop -->
     <dependency>
-       <groupId>org.apache.hbase</groupId>
-       <artifactId>hbase-client</artifactId>
-       <version>1.1.2</version>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-client</artifactId>
+        <version>${hadoop.version}</version>
+        <exclusions>
+            <exclusion>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+            </exclusion>
+            <exclusion>
+                <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+            </exclusion>
+           <exclusion>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+            </exclusion>
+          </exclusions>
     </dependency>
-    
   </dependencies>
 
    <dependencyManagement>
