--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,13 @@
             </exclusion>
           </exclusions>
     </dependency>
+    
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>16.0</version>
+    </dependency>
+    
   </dependencies>
 
    <dependencyManagement>
