--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,6 @@
           <name>Public online Restlet repository</name>
           <url>http://repo.spring.io/plugins-release/</url>
       </repository>
-
   </repositories>
   
   <properties>
@@ -42,6 +41,8 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.7</java.version>
     <hadoop.version>2.6.0</hadoop.version>
+    <hbase.version>0.98.4.2.2.9.0-3393-hadoop2</hbase.version>
+    <guava.version>16.0</guava.version>
   </properties>
 
   <dependencies>
@@ -79,12 +80,6 @@
         <version>3.2.2</version>
     </dependency>
 
-	 <dependency>
-	     <groupId>org.apache.hbase</groupId>
-	     <artifactId>hbase-client</artifactId>
-	     <version>0.98.4.2.2.9.0-3393-hadoop2</version>
-	 </dependency>
-
     <!-- Hadoop -->
     <dependency>
         <groupId>org.apache.hadoop</groupId>
@@ -106,10 +101,16 @@
           </exclusions>
     </dependency>
     
+     <dependency>
+         <groupId>org.apache.hbase</groupId>
+         <artifactId>hbase-client</artifactId>
+         <version>${hbase.version}</version>
+     </dependency>
+
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>16.0</version>
+      <version>${guava.version}</version><!--$NO-MVN-MAN-VER$-->
     </dependency>
     
   </dependencies>
